[package]
name = "telegram-bot-esp32"
version = "0.1.0"
edition = "2021"

[dependencies]
esp-backtrace = { version = "0.14.2", features = [
    "esp32",
    "exception-handler",
    "panic-handler",
    "println",
] }

esp-hal = { version = "0.23.0", features = ["esp32"] }
esp-println = { version = "0.12.0", features = ["esp32", "log"] }
esp-alloc = { version = "0.5.0" }
log = { version = "0.4.21" }
static_cell = { version = "2.1.0", features = ["nightly"] }
critical-section = "1.2.0"

embedded-io = "0.6.1"
embedded-io-async = "0.6.1"
embassy-net = { version = "0.4.0", features = [
    "tcp",
    "udp",
    "dhcpv4",
    "medium-ethernet",
    "dns",
] }
embassy-executor = { version = "0.6.0", features = ["task-arena-size-32768"] }
embassy-time = { version = "0.4", features = ["generic-queue-8"] }
esp-hal-embassy = { version = "0.6.0", features = ["esp32"] }

esp-wifi = { version = "0.12.0", default-features = false, features = [
    "esp32",
    "utils",
    "wifi",
    "esp-alloc",
    "log",
] }

heapless = { version = "0.8.0", default-features = false }
smoltcp = { version = "0.11.0", default-features = false, features = [
    "medium-ethernet",
    "proto-dhcpv4",
    "proto-igmp",
    "proto-ipv4",
    "socket-dhcpv4",
    "socket-icmp",
    "socket-raw",
    "socket-tcp",
    "socket-udp",
    "dns-max-server-count-4",
] }

nourl = "0.1.1"
load-dotenv = "0.1.2"

# HTTP
# reqwless = { git = "https://github.com/drogue-iot/reqwless.git", default-features = false, features = [
#     "esp-mbedtls",
#     "log",
# ] }
# esp-mbedtls = { git = "https://github.com/esp-rs/esp-mbedtls.git", features = [
#     "esp32",
# ] }
reqwless = { version = "0.13.0", default-features = false, features = [
    "esp-mbedtls",
    "log",
], git = "https://github.com/drogue-iot/reqwless.git" }

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
