

[package]
edition = "2021"
name = "telegram-bot-esp32"
version = "0.1.0"

[[bin]]
name = "telegram-bot-esp32"
path = "./src/main.rs"

[dependencies]
embassy-net = { version = "0.6.0", features = [
  "dhcpv4",
  "medium-ethernet",
  "tcp",
  "udp",
  "dns",
] }
embedded-io = "0.6.1"
embedded-io-async = "0.6.1"
esp-alloc = { version = "0.6.0" }
esp-backtrace = { version = "0.15.0", features = [
  "esp32",
  "exception-handler",
  "panic-handler",
  "println",
] }
esp-hal = { version = "0.23.1", features = ["esp32", "unstable"] }
esp-println = { version = "0.13.0", features = ["esp32", "log"] }
esp-wifi = { version = "0.12.0", default-features = false, features = [
  "esp-alloc",
  "esp32",
  "log",
  "utils",
  "wifi",
] }
heapless = { version = "0.8.0", default-features = false }
log = { version = "0.4.21" }
smoltcp = { version = "0.12.0", default-features = false, features = [
  "medium-ethernet",
  "multicast",
  "proto-dhcpv4",
  "proto-dns",
  "proto-ipv4",
  "socket-dns",
  "socket-icmp",
  "socket-raw",
  "socket-tcp",
  "socket-udp",
  "dns-max-server-count-4",
] }

esp-mbedtls = { git = "https://github.com/esp-rs/esp-mbedtls.git", features = [
  "esp32",
] }
reqwless = { version = "0.13.0", default-features = false, features = [
  "esp-mbedtls",
  "log",
], git = "https://github.com/drogue-iot/reqwless.git" }


critical-section = "1.2.0"
embassy-executor = { version = "0.7.0", features = ["task-arena-size-32768"] }
embassy-time = { version = "0.4.0", features = ["generic-queue-8"] }
esp-hal-embassy = { version = "0.6.0", features = ["esp32"] }
static_cell = { version = "2.1.0", features = ["nightly"] }
load-dotenv = "0.1.2"
serde-json-core = "0.6.0"
serde = { version = "1.0.217", default-features = false, features = [
  "derive",
  "alloc",
] }
embedded-nal-async = "0.8.0"

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
